# edinet-wagatoushi

./: .gitignore  .gitmodules  .internal-api-key.example  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRAWLER_DATA_TYPES.md  PROJECT_FLOW.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_PLAN.md  SECURITY.md  SECURITY_REVIEW.md  biome.json  docker-compose.yml  edinet_corpus-sample-README.md  lefthook.yml  package.json  pnpm-lock.yaml  ruff.toml  skills-lock.json  testcomannd  turbo.json
edinet-wrapper/: .gitignore  EDINET_LOAD_INVESTIGATION.md  GITHUB_ACTIONS_SETUP.md  LOCAL_EDINET_CORPUS.md  MIGRATION.md  QUICK_START.md  README.md  SETUP.md  pyproject.toml  sample_data_structure.json
edinet-wrapper/.github/workflows/: edinet_corpus.yml
edinet-wrapper/config/: screener_columns.json
edinet-wrapper/data/: EdinetcodeDlInfo.csv
edinet-wrapper/docs/: DATA_STRUCTURE_ANALYSIS.md  EDINET_ONE_DAY_FETCH.md  GITHUB_ACTIONS_SETUP.md  LOCAL_EDINET_CORPUS.md  LOCAL_TESTING.md  SCRIPTS_PLAN.md  SETUP.md
edinet-wrapper/scripts/: README_DOWNLOAD.md  SCRIPTS_PLAN.md  analyze_data_structure.py  analyze_frequency_per_industry.py  analyze_frequency_per_year.py  analyze_tsv_structure.py  build_company_metrics.py  build_screener_data.py  company_list_33.json  create_corpus_sample.py  create_sample_data.py  download_company_10years.py  edinet_corpus.sh  example_usage.py  fetch_33_companies.py  postman_api_urls.py  prepare_edinet_corpus.py  prepare_sample_companies.py  prepare_sample_company.py  test_download.sh  test_import.py
edinet-wrapper/sql/: d1_schema.sql
(+14796 files in other folders)
