[project]
name = "edinet-wrapper"
version = "0.1.0"
description = "Wrapper project for edinet2dataset module"
requires-python = ">= 3.10"
dependencies = [
    # edinet2datasetは開発モードでインストールする必要があります
    # pip install -e ../edinet2dataset
    # または、ローカルパス指定を使用する場合:
    # "edinet2dataset @ file:///${PROJECT_ROOT}/../edinet2dataset",
    # 注: 実際の使用時は pip install -e ../edinet2dataset を実行してください
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edinet_wrapper"]
