[project]
name = "edinet-wrapper"
version = "0.1.0"
description = "Wrapper project for edinet2dataset module"
requires-python = ">= 3.10"
dependencies = [
    "edinet2dataset",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edinet_wrapper"]

# 親ディレクトリの edinet2dataset（サブモジュール＝構築用リポジトリ）を参照
[tool.uv.sources]
edinet2dataset = { path = "../edinet2dataset", editable = true }
